testcases added